Get submissions
Successfully retrieving submissions and parsing them to java class